<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.paris.lutece.tools</groupId>
    <artifactId>lutece-maven-plugin</artifactId>
    <packaging>maven-plugin</packaging>
    <version>4.1.3-SNAPSHOT</version>
    <name>Lutece maven plugin</name>

    <description>
        A Maven plugin which handles the common tasks to develop and
        package the Lutece core and Lutece plugins, and to assemble a
        web site from a set of Lutece artifacts.
    </description>

    <inceptionYear>2006</inceptionYear>

    <!-- Useful for version:display-plugin-updates -->
    <prerequisites>
        <maven>3.5.4</maven>
    </prerequisites>

    <organization>
        <name>Mairie de Paris</name>
        <url>http://lutece.paris.fr</url>
    </organization>

    <url>http://dev.lutece.paris.fr/plugins/${project.artifactId}/</url>

    <repositories>
        <repository>
            <id>luteceSnapshot</id>
            <name>luteceSnapshot</name>
            <url>http://dev.lutece.paris.fr/snapshot_repository</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>lutece</id>
            <name>luteceRepository</name>
            <url>http://dev.lutece.paris.fr/maven_repository</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>3.2.5</version>
        </dependency>

        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-tools-api</artifactId>
            <version>3.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-compat</artifactId>
            <version>3.2.5</version>
        </dependency>

        <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-archiver</artifactId>
            <version>2.10.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-archiver</artifactId>
            <version>2.6</version>
        </dependency>

        <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>file-management</artifactId>
            <version>1.2.1</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <!-- dependencies to annotations -->
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>3.4</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>


    <build>
        <plugins>
            <!-- Configuration to release from GitHub -->
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <providerImplementations>
                        <git>jgit</git>
                    </providerImplementations>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.scm</groupId>
                        <artifactId>maven-scm-provider-jgit</artifactId>
                        <version>1.9.2</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.8.2</version>
                <configuration>
                    <inputEncoding>UTF-8</inputEncoding>
                    <outputEncoding>UTF-8</outputEncoding>
                    <locales>en,fr</locales>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-descriptor</id>
                        <goals>
                            <goal>attach-descriptor</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.7</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>3.8.2</version>
                <executions>
                    <execution>
                        <id>generated-helpmojo</id>
                        <goals>
                            <goal>helpmojo</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ftp</artifactId>
                <version>2.6</version>
            </extension>
        </extensions>
    </build>

    <scm>
        <connection>scm:git:https://github.com/lutece-platform/tools-maven-lutece-plugin.git</connection>
        <developerConnection>scm:git:https://github.com/lutece-platform/tools-maven-lutece-plugin.git</developerConnection>
        <url>https://github.com/lutece-platform/tools-maven-lutece-plugin.git</url>
        <tag>tools-maven-lutece-plugin-4.0.0</tag>
    </scm>



    <distributionManagement>
        <repository>
            <id>lutece_releases_repository</id>
            <url>http://dev.lutece.paris.fr/nexus/content/repositories/lutece_releases_repository</url>
        </repository>

        <snapshotRepository>
            <uniqueVersion>true</uniqueVersion>
            <id>lutece_snapshots_repository</id>
            <url>http://dev.lutece.paris.fr/nexus/content/repositories/lutece_snapshots_repository</url>
        </snapshotRepository>

        <site>
            <id>lutece_ftp_site_maven</id>
            <url>ftp://site-deploy.dev.lutece.paris.fr/site/plugins/maven-lutece-plugin</url>
        </site>
    </distributionManagement>

    <!--<distributionManagement>
        <site>
            <id>ssh-repository</id>
            <url>
                scp://${serverUrl}/opt/lutece/site/plugins/${project.artifactId}
            </url>
        </site>
    </distributionManagement>-->

    <properties>
        <jiraProjectName>MAVENPLUGIN</jiraProjectName>
        <jiraComponentId>10157</jiraComponentId>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <profiles>
        <profile>
            <id>doclint-java8-disable</id>
            <activation>
                <jdk>[1.8,)</jdk>
            </activation>
            <properties>
                <additionalparam>-Xdoclint:none</additionalparam>
            </properties>
        </profile>
    </profiles>

</project>
